# forensic-evidence-fusion

./: .gitignore  .gitleaks.toml  AGENTS.md  AGENT_WORKFLOW.md  EPIC_EVALUATION.md  EPIC_TEMPLATE.md  PROJECT_PLAN.md  README.md  STATUS.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_user_auth_fields.py  003_case_management.py  004_artifact_upload_fields.py  005_artifact_provenance_metadata.py  006_artifact_classification_and_batch.py  007_transformation_records.py  008_readable_views.py  009_structured_datasets.py  010_canonical_schema.py  011_claim_fields.py  012_claim_resolution_fields.py  013_search_chunks.py  014_assistant_logs.py
backend/app/: __init__.py  main.py
backend/app/api/: artifacts.py  assistant.py  audit.py  auth.py  cases.py  claims.py  deps.py  events.py  indexing.py  operations.py  readable_views.py  reports.py  review_queue.py  router.py  structured_datasets.py  transformations.py
backend/app/core/: auth_deps.py  auth_provider.py  config.py  keyvault.py  logging.py  security.py  telemetry.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  artifact.py  assistant_log.py  audit.py  base.py  case.py  case_membership.py  claim.py  entity.py  event.py  readable_view.py  search_chunk.py  structured_dataset.py  transformation.py  user.py
backend/app/parsers/: __init__.py  csv_parser.py  json_parser.py  pdf_parser.py
backend/tests/: conftest.py  test_artifact_metadata.py  test_artifacts.py  test_assistant_service.py  test_audit_api.py  test_audit_coverage.py  test_audit_service.py  test_auth.py  test_auth_deps.py  test_bulk_upload.py  test_canonical_models.py  test_cases.py  test_chunk_service.py  test_claim_resolution_service.py  test_claims.py  test_classification_service.py  test_config.py  test_db_session.py  test_event_service.py  test_health.py  test_indexing.py  test_keyvault.py  test_logging_safety.py  test_manifest_service.py  test_models.py  test_normalization_service.py  test_operations.py  test_quality_tooling.py  test_readable_views.py  test_report_service.py  test_review_queue.py  test_review_service.py  test_smoke_pipeline.py  test_smoke_r2.py  test_smoke_r3_assistant.py  test_smoke_r3_timeline_claims.py  test_smoke_r4_ops.py  test_smoke_r4_report_audit.py  test_storage_paths.py  test_storage_service.py  (+2 more)
(+145 files in other folders)
