[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-evidence-fusion-backend"
version = "0.1.0"
description = "Forensic Evidence Fusion Platform API"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "bcrypt>=4.0.1,<5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
    "azure-storage-blob>=12.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: full pipeline or platform smoke tests (run via pytest -m smoke)",
]
